@@ -1,5 +1,17 @@
 2008-08-21  Anthony Ricaud  <rik24d@gmail.com>
 
+        After trying to add the expression, try again with quotes for
+        easier edition.
+
+        https://bugs.webkit.org/show_bug.cgi?id=20466
+
+        Reviewed by Tim Hatcher.
+
+        * page/inspector/ObjectPropertiesSection.js: Added an
+        evaluateExpression function.
+
+2008-08-21  Anthony Ricaud  <rik24d@gmail.com>
+
         Perform Inspector searches on search event to clear results when
         clicking the cross to empty it. Delete the lastQuery when the field
         is emptied in order to perform the search if exactly the same query
